--- a/index.html
+++ b/index.html
@@ -27,20 +27,156 @@
                 </div>
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
-            <section class="intro section-widh__narrow">
-                <h2 class="intro__title"></h2>
-                <p class="intro__text"></p>
+            <section class="intro section-width__narrow">
+                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+                    планируют провести отпуск в родной стране. Мол,
+                    чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
+                    густыми лесами Саян и
+                    суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету,
+                    загранпаспорта и
+                    многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку
+                    троих детей, усадила
+                    их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
+                    интересные места,
+                    достойные вашего отпуска.</p>
                 <li class="intro__list">
-                    <ul class="intro__item"></ul>
-                    <ul class="intro__item"></ul>
-                    <ul class="intro__item"></ul>
-                    <ul class="intro__item"></ul>
-                    <ul class="intro__item"></ul>
+                    <ul class="intro__item">Часовых поясов 11
+                    </ul>
+                    <ul class="intro__item">Объектов природного наследия ЮНЕСКО 12
+                    </ul>
+                    <ul class="intro__item">Объектов культурного наследия ЮНЕСКО 16
+                    </ul>
+                    <ul class="intro__item">Природных заповедников 105
+                    </ul>
+                    <ul class="intro__item">Аэропортов 241</ul>
                 </li>
             </section>
-            <section class="gallery section-width__wide"></section>
-            <section class="places section-width__narrow"></section>
-            <section class="cover section-width__wide"></section>
+            <section class="gallery section-width__wide">
+                <img src="./images/gallery/item1.jpg" alt="вид из окна поезда" class="gallery__item1">
+                <img src="./images/gallery/item2.jpg" alt="вид с вершины горы" class="gallery__item2">
+                <img src="./images/gallery/item3.jpg" alt="поле с сеновалом" class="gallery__item3">
+                <img src="./images/gallery/item4.jpg" alt="лес в тумане" class="gallery__item4">
+                <img src="./images/gallery/item5.jpg" alt="машина на ледяном озере" class="gallery__item5">
+                <img src="./images/gallery/item6.jpg" alt="берег реки с видом на горы" class="gallery__item6">
+                <img src="./images/gallery/item7.jpg" alt="вид гор" class="gallery__item7">
+                <img src="./images/gallery/item8.jpg" alt="знак пешеходного перехода на фоне волнорезов"
+                    class="gallery__item8">
+                <img src="./images/gallery/item9.jpg" alt="каньоны в тумане" class="gallery__item9">
+                <img src="./images/gallery/item10.jpg" alt="вид на гору вдалеке" class="gallery__item10">
+                <img src="./images/gallery/item11.jpg" alt="вид на заснеженный крутой берег" class="gallery__item11">
+                <img src="./images/gallery/item12.jpg" alt="гористая местность в тумане" class="gallery__item12">
+            </section>
+            <section class="places section-width__narrow">
+                <div class="places__place">
+                    <h2 class="places__title">Куршская коса</h2>
+                    <div class="places__website">
+                        <p class="palces__url-heading">URL</p>
+                        <a href="http://park-kosa.ru" class="places__link link-hover">park-kosa.ru</a>
+                    </div>
+                    <img src="./images/places/places__img1.jpg" alt="берег Куршского залива" class="places__image">
+                    <p class="places__text places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
+                        водных горизонта — спокойного Куршского залива с одной
+                        стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
+                        российского анклава.
+                        <br><br>
+                        На этом Калининградская область не заканчивается. Для
+                        путешественника и исследователя там же по соседству — самая
+                        западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
+                        городов. Атмосфера здешних
+                        мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+                    </p>
+                </div>
+                <div class="places__place">
+                    <h2 class="places__title">Кольский</h2>
+                    <div class="places__website">
+                        <p class="palces__url-heading">URL</p>
+                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                            class="places__link link-hover">National Geographic</a>
+                    </div>
+                    <img src="./images/places/places__img2.jpg" alt="зимнее предгорье полуострова"
+                        class="places__image">
+                    <p class="places__text places__text">Почти весь полуостров находится за Полярным кругом. Саамская
+                        тундра, от которой на юг —
+                        тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                        <br><br>
+                        Возможно, вы смотрели Звягинцева и даже слышали историю
+                        арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+                        осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
+                        пронизывающей земную кору
+                        сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть
+                        северное сияние начинает
+                        сбываться с билетом
+                        в Мурманск.
+                    </p>
+                </div>
+                <div class="places__place">
+                    <h2 class="places__title">Алтай</h2>
+                    <div class="places__website">
+                        <p class="palces__url-heading">URL</p>
+                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ
+" class="places__link link-hover">YouTube
+                        </a>
+                    </div>
+                    <img src="./images/places/places__img3.jpg" alt="ноутбук на фоне леса" class="places__image">
+                    <p class="places__text places__text">Алтай — одно из красивейших мест в России.
+                        В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                        горные реки и озёра. А если
+                        вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+                        воздухом.
+                        <br><br>
+                        Алтай — одно из красивейших мест в России.
+                        В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                        горные реки и озёра. А если
+                        вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+                        воздухом.
+                    </p>
+                </div>
+                <div class="places__place">
+                    <h2 class="places__title">Зимний Байкал</h2>
+                    <div class="places__website">
+                        <p class="palces__url-heading">URL</p>
+                        <a href="https://vk.com/baikalmile"
+                            class="places__link link-hover">https://vk.com/baikalmile</a>
+                    </div>
+                    <img src="./images/places/places__img4.jpg" alt="лёд на поверхности озера" class="places__image">
+                    <p class="places__text places__text">Всем известен Байкал как крупнейшее озеро
+                        в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
+                        мест в России.
+                        <br><br>
+                        Конечно, это всё так. Но Байкал ещё идеальное место
+                        для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+                        привязывает себя
+                        к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
+                        фестивале «Байкальская
+                        миля» был поставлен мировой рекорд — 197.011 км/ч.
+                    </p>
+                </div>
+                <div class="places__place">
+                    <h2 class="places__title">Карелия</h2>
+                    <div class="places__website">
+                        <p class="palces__url-heading">URL</p>
+                        <a href="http://vodlozero.ru/" class="places__link link-hover">http://vodlozero.ru/</a>
+                    </div>
+                    <img src="./images/places/places__img5.jpg" alt="широкая река посередине леса"
+                        class="places__image">
+                    <p class="places__text places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая
+                        тайгу сибирская лиственница не растёт западнее Водлозера. Зато
+                        здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот
+                        никогда не знали
+                        топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+                        видевшему солнце раньше, чем
+                        увидал его Иван Грозный.
+                        В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+                        в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                </div>
+            </section>
+            <section class="cover section-width__wide">
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на
+                    собаках»</a>
+                <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+                    электричках.</h3>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
