pre-final version

--- a/index.html
+++ b/index.html
@@ -172,13 +172,26 @@
                 </div>
             </section>
             <section class="cover section-width__wide">
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на
+                <div class="overlay"></div>
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До
+                    Байкала «на
                     собаках»</a>
-                <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-                    электричках.</h3>
+                <h2 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                    на
+                    электричках.</h2>
+
             </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer section-width__wide">
+            <nav class="footer__links">
+                <a target="_blank" class="footer__link link-hover" href="#">Карты</a>
+                <a target="_blank" class="footer__link link-hover" href="#">Погода</a>
+                <a target="_blank" class="footer__link link-hover" href="#">Расписание</a>
+                <a target="_blank" class="footer__link link-hover" href="#">Календарь</a>
+                <a target="_blank" class="footer__link link-hover" href="#">Путешествия</a>
+            </nav>
+            <p class="footer__author">&copy; 2023. Айшат Сафин</p>
+        </footer>
     </div>
 </body>
 
