--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Путешествия по России</title>
 </head>
 
-<body>
+<body class="root">
     <div class="page">
         <header class="header section-width__wide">
             <img class="header__logo" src="./images/logo.svg" alt="контур карты России">
@@ -53,19 +53,19 @@
                 </li>
             </section>
             <section class="gallery section-width__wide">
-                <img src="./images/gallery/item1.jpg" alt="вид из окна поезда" class="gallery__item1">
-                <img src="./images/gallery/item2.jpg" alt="вид с вершины горы" class="gallery__item2">
-                <img src="./images/gallery/item3.jpg" alt="поле с сеновалом" class="gallery__item3">
-                <img src="./images/gallery/item4.jpg" alt="лес в тумане" class="gallery__item4">
-                <img src="./images/gallery/item5.jpg" alt="машина на ледяном озере" class="gallery__item5">
-                <img src="./images/gallery/item6.jpg" alt="берег реки с видом на горы" class="gallery__item6">
-                <img src="./images/gallery/item7.jpg" alt="вид гор" class="gallery__item7">
+                <img src="./images/gallery/item1.jpg" alt="вид из окна поезда" class="gallery__item">
+                <img src="./images/gallery/item2.jpg" alt="вид с вершины горы" class="gallery__item">
+                <img src="./images/gallery/item3.jpg" alt="поле с сеновалом" class="gallery__item">
+                <img src="./images/gallery/item4.jpg" alt="лес в тумане" class="gallery__item">
+                <img src="./images/gallery/item5.jpg" alt="машина на ледяном озере" class="gallery__item">
+                <img src="./images/gallery/item6.jpg" alt="берег реки с видом на горы" class="gallery__item">
+                <img src="./images/gallery/item7.jpg" alt="вид гор" class="gallery__item">
                 <img src="./images/gallery/item8.jpg" alt="знак пешеходного перехода на фоне волнорезов"
-                    class="gallery__item8">
-                <img src="./images/gallery/item9.jpg" alt="каньоны в тумане" class="gallery__item9">
-                <img src="./images/gallery/item10.jpg" alt="вид на гору вдалеке" class="gallery__item10">
-                <img src="./images/gallery/item11.jpg" alt="вид на заснеженный крутой берег" class="gallery__item11">
-                <img src="./images/gallery/item12.jpg" alt="гористая местность в тумане" class="gallery__item12">
+                    class="gallery__item">
+                <img src="./images/gallery/item9.jpg" alt="каньоны в тумане" class="gallery__item">
+                <img src="./images/gallery/item10.jpg" alt="вид на гору вдалеке" class="gallery__item">
+                <img src="./images/gallery/item11.jpg" alt="вид на заснеженный крутой берег" class="gallery__item">
+                <img src="./images/gallery/item12.jpg" alt="гористая местность в тумане" class="gallery__item">
             </section>
             <section class="places section-width__narrow">
                 <div class="places__place">
@@ -172,14 +172,13 @@
                 </div>
             </section>
             <section class="cover section-width__wide">
-                <div class="overlay"></div>
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До
-                    Байкала «на
-                    собаках»</a>
-                <h2 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
-                    на
-                    электричках.</h2>
-
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala"  class="cover__link">
+                    <h2  class="cover__title">До Байкала «на
+                        собаках»</h2>
+                    <P class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                        на
+                        электричках.</P>
+                </a>
             </section>
         </main>
         <footer class="footer section-width__wide">
