--- a/index.html
+++ b/index.html
@@ -75,17 +75,20 @@
                         <a href="http://park-kosa.ru" class="places__link link-hover">park-kosa.ru</a>
                     </div>
                     <img src="./images/places/places__img1.jpg" alt="берег Куршского залива" class="places__image">
-                    <p class="places__text places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
+                   <div class="places__texts">
+                        <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
                         водных горизонта — спокойного Куршского залива с одной
                         стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
                         российского анклава.
-                        <br><br>
+                    </p>
+                    <p class="places__text">
                         На этом Калининградская область не заканчивается. Для
                         путешественника и исследователя там же по соседству — самая
                         западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
                         городов. Атмосфера здешних
                         мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
                     </p>
+                   </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Кольский</h2>
@@ -96,10 +99,12 @@
                     </div>
                     <img src="./images/places/places__img2.jpg" alt="зимнее предгорье полуострова"
                         class="places__image">
-                    <p class="places__text places__text">Почти весь полуостров находится за Полярным кругом. Саамская
+                   <div class="places__texts">
+                    <p class="places__text">Почти весь полуостров находится за Полярным кругом. Саамская
                         тундра, от которой на юг —
                         тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
-                        <br><br>
+                    </p>
+                    <p class="places__text">
                         Возможно, вы смотрели Звягинцева и даже слышали историю
                         арктического фестиваля в Териберке. Возможно, слово «Хибины» не
                         осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
@@ -109,6 +114,7 @@
                         сбываться с билетом
                         в Мурманск.
                     </p>
+                   </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Алтай</h2>
@@ -119,18 +125,21 @@
                         </a>
                     </div>
                     <img src="./images/places/places__img3.jpg" alt="ноутбук на фоне леса" class="places__image">
-                    <p class="places__text places__text">Алтай — одно из красивейших мест в России.
+                  <div class="places__texts">
+                    <p class="places__text">Алтай — одно из красивейших мест в России.
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                         горные реки и озёра. А если
                         вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
                         воздухом.
-                        <br><br>
+                    </p>
+                    <p class="places__text">
                         Алтай — одно из красивейших мест в России.
                         В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
                         горные реки и озёра. А если
                         вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
                         воздухом.
                     </p>
+                  </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Зимний Байкал</h2>
@@ -140,10 +149,12 @@
                             class="places__link link-hover">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/places/places__img4.jpg" alt="лёд на поверхности озера" class="places__image">
-                    <p class="places__text places__text">Всем известен Байкал как крупнейшее озеро
+                  <div class="places__texts">
+                    <p class="places__text">Всем известен Байкал как крупнейшее озеро
                         в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
                         мест в России.
-                        <br><br>
+                    </p>
+                    <p class="places__text">
                         Конечно, это всё так. Но Байкал ещё идеальное место
                         для соревнований по скийорингу. Это такой вид спорта, когда лыжник
                         привязывает себя
@@ -151,6 +162,7 @@
                         фестивале «Байкальская
                         миля» был поставлен мировой рекорд — 197.011 км/ч.
                     </p>
+                  </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Карелия</h2>
@@ -160,7 +172,8 @@
                     </div>
                     <img src="./images/places/places__img5.jpg" alt="широкая река посередине леса"
                         class="places__image">
-                    <p class="places__text places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая
+                   <div class="places__texts">
+                    <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая
                         тайгу сибирская лиственница не растёт западнее Водлозера. Зато
                         здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот
                         никогда не знали
@@ -169,6 +182,7 @@
                         увидал его Иван Грозный.
                         В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
                         в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                   </div>
                 </div>
             </section>
             <section class="cover section-width__wide">
