--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                     интересные места,
                     достойные вашего отпуска.</p>
                 <li class="intro__list">
-                    <ul class="intro__item">Часовых поясов 11
+                    <ul class="intro__item"><span class="intro__span">Часовых поясов</span> 11
                     </ul>
-                    <ul class="intro__item">Объектов природного наследия ЮНЕСКО 12
+                    <ul class="intro__item"><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12
                     </ul>
-                    <ul class="intro__item">Объектов культурного наследия ЮНЕСКО 16
+                    <ul class="intro__item"><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16
                     </ul>
-                    <ul class="intro__item">Природных заповедников 105
+                    <ul class="intro__item"><span class="intro__span">Природных заповедников</span> 105
                     </ul>
-                    <ul class="intro__item">Аэропортов 241</ul>
+                    <ul class="intro__item"><span class="intro__span">Аэропортов</span> 241</ul>
                 </li>
             </section>
             <section class="gallery section-width__wide">
@@ -133,11 +133,8 @@
                         воздухом.
                     </p>
                     <p class="places__text">
-                        Алтай — одно из красивейших мест в России.
-                        В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-                        горные реки и озёра. А если
-                        вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
-                        воздухом.
+                        Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, 
+                        а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
                     </p>
                   </div>
                 </div>
