--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
                     их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
                     интересные места,
                     достойные вашего отпуска.</p>
-                <li class="intro__list">
-                    <ul class="intro__item"><span class="intro__span">Часовых поясов</span> 11
-                    </ul>
-                    <ul class="intro__item"><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12
-                    </ul>
-                    <ul class="intro__item"><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16
-                    </ul>
-                    <ul class="intro__item"><span class="intro__span">Природных заповедников</span> 105
-                    </ul>
-                    <ul class="intro__item"><span class="intro__span">Аэропортов</span> 241</ul>
-                </li>
+                <ul class="intro__list">
+                    <li class="intro__item"><span class="intro__span">Часовых поясов</span> 11
+                    </li>
+                    <li class="intro__item"><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12
+                    </li>
+                    <li class="intro__item"><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16
+                    </li>
+                    <li class="intro__item"><span class="intro__span">Природных заповедников</span> 105
+                    </li>
+                    <li class="intro__item"><span class="intro__span">Аэропортов</span> 241</li>
+                </ul>
             </section>
             <section class="gallery section-width__wide">
                 <img src="./images/gallery/item1.jpg" alt="вид из окна поезда" class="gallery__item">
