--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="root">
     <div class="page">
-        <header class="header section-width__wide">
+        <header class="header">
             <img class="header__logo" src="./images/logo.svg" alt="контур карты России">
             <nav class="header__nav">
                 <a class="header__lang-link link-hover" href="#">Ru</a>
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <main class="main">
-            <section class="lead section-width__narrow">
+            <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
                 <div class="lead__images">
@@ -27,7 +27,7 @@
                 </div>
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
-            <section class="intro section-width__narrow">
+            <section class="intro">
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
                     планируют провести отпуск в родной стране. Мол,
@@ -52,7 +52,7 @@
                     <li class="intro__item"><span class="intro__span">Аэропортов</span> 241</li>
                 </ul>
             </section>
-            <section class="gallery section-width__wide">
+            <section class="gallery">
                 <img src="./images/gallery/item1.jpg" alt="вид из окна поезда" class="gallery__item">
                 <img src="./images/gallery/item2.jpg" alt="вид с вершины горы" class="gallery__item">
                 <img src="./images/gallery/item3.jpg" alt="поле с сеновалом" class="gallery__item">
@@ -67,11 +67,11 @@
                 <img src="./images/gallery/item11.jpg" alt="вид на заснеженный крутой берег" class="gallery__item">
                 <img src="./images/gallery/item12.jpg" alt="гористая местность в тумане" class="gallery__item">
             </section>
-            <section class="places section-width__narrow">
+            <section class="places">
                 <div class="places__place">
                     <h2 class="places__title">Куршская коса</h2>
                     <div class="places__website">
-                        <p class="palces__url-heading">URL</p>
+                        <p class="places__url-heading">URL</p>
                         <a href="http://park-kosa.ru" class="places__link link-hover">park-kosa.ru</a>
                     </div>
                     <img src="./images/places/places__img1.jpg" alt="берег Куршского залива" class="places__image">
@@ -93,7 +93,7 @@
                 <div class="places__place">
                     <h2 class="places__title">Кольский</h2>
                     <div class="places__website">
-                        <p class="palces__url-heading">URL</p>
+                        <p class="places__url-heading">URL</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                             class="places__link link-hover">National Geographic</a>
                     </div>
@@ -119,7 +119,7 @@
                 <div class="places__place">
                     <h2 class="places__title">Алтай</h2>
                     <div class="places__website">
-                        <p class="palces__url-heading">URL</p>
+                        <p class="places__url-heading">URL</p>
                         <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ
 " class="places__link link-hover">YouTube
                         </a>
@@ -141,7 +141,7 @@
                 <div class="places__place">
                     <h2 class="places__title">Зимний Байкал</h2>
                     <div class="places__website">
-                        <p class="palces__url-heading">URL</p>
+                        <p class="places__url-heading">URL</p>
                         <a href="https://vk.com/baikalmile"
                             class="places__link link-hover">https://vk.com/baikalmile</a>
                     </div>
@@ -164,7 +164,7 @@
                 <div class="places__place">
                     <h2 class="places__title">Карелия</h2>
                     <div class="places__website">
-                        <p class="palces__url-heading">URL</p>
+                        <p class="places__url-heading">URL</p>
                         <a href="http://vodlozero.ru/" class="places__link link-hover">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/places/places__img5.jpg" alt="широкая река посередине леса"
@@ -182,7 +182,7 @@
                    </div>
                 </div>
             </section>
-            <section class="cover section-width__wide">
+            <section class="cover">
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala"  class="cover__link">
                     <h2  class="cover__title">До Байкала «на
                         собаках»</h2>
@@ -192,7 +192,7 @@
                 </a>
             </section>
         </main>
-        <footer class="footer section-width__wide">
+        <footer class="footer">
             <nav class="footer__links">
                 <a target="_blank" class="footer__link link-hover" href="#">Карты</a>
                 <a target="_blank" class="footer__link link-hover" href="#">Погода</a>
