--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                 <a href="https://stampsy.com/na-elektrichkakh-do-baikala"  class="cover__link">
                     <h2  class="cover__title">До Байкала «на
                         собаках»</h2>
-                    <P class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
                         на
-                        электричках.</P>
+                        электричках.</p>
                 </a>
             </section>
         </main>
